// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      className="bp3-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="bp3-button-text"
      >
        <span
          className="bp3-icon bp3-icon-error"
          icon="error"
        >
          <svg
            data-icon="error"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              error
            </desc>
            <path
              d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
  </span>
</span>
`;

exports[`should render correctly when reporting 1`] = `
Array [
  <div>
    Blueprint3.Overlay
  </div>,
  <span
    className="bp3-popover-wrapper"
  >
    <span
      className="bp3-popover-target"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        className="bp3-button"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="bp3-button-text"
        >
          <span
            className="bp3-icon bp3-icon-error"
            icon="error"
          >
            <svg
              data-icon="error"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                error
              </desc>
              <path
                d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
    </span>
  </span>,
]
`;
